libs/extractor/src/snapshots/extractor__tests__styles_the_build_cannot_read.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import { Box, css, styled, keyframes } from '@devup-ui/react';\nexport const a = (base) => css(base);\nexport const b = (on) => css(on && { color: 'blue' });\nexport const c = css('color: green; margin: 0');\nexport const d = (on, base) => css(on ? base : { color: 'red' });\nexport const e = css({ ...null, ...false, ...undefined, ...(void 0), p: 1 });\nexport const f = (rest, handler, k) => <Box {...rest} {...{ p: 1, onClick: handler, [k]: 1 }} />;\nexport const g = (theme, key) => <Box bg={theme.colors[key]} color={{ a: 'red', ...theme.more }['b']} />;\nexport const h = (Base) => styled.div(Base);\nexport const i = keyframes({ from: { opacity: 0 } } as const);\nexport const j = css(...{ bg: 'red' });\",\nExtractOption::default(),).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "green",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "__devupSpread2",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "color",
                level: 0,
                identifier: "({a:`red`,...theme.more})[`b`]",
                selector: None,
                style_order: None,
            },
        ),
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "0",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui-0.css\";\nexport const a = (base) => ((__devupCompose0) => __devupCompose0)(base);\nexport const b = (on) => ((__devupCompose0) => ((__devupAssignment130) => __devupAssignment130?.[0] ?? \"\")(__devupCompose0[0] ? ((__devupValue) => [\n\t\"OLcolor-vblue\",\n\t{},\n\t__devupValue\n])(\"blue\") : ((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(undefined)))(((__devupChoice) => [__devupChoice, __devupChoice ? \"\" : \"\"])(on));\nexport const c = \"OLmargin-v0 OLcolor-vgreen\";\nexport const d = (on, base) => ((__devupCompose0) => `${__devupCompose0[0] ? __devupCompose0[1] : \"\"} ${((__devupAssignment240) => __devupAssignment240?.[0] ?? \"\")(__devupCompose0[0] ? ((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(undefined) : ((__devupValue) => [\n\t\"OLcolor-vred\",\n\t{},\n\t__devupValue\n])(\"red\"))}`)(((__devupChoice) => [__devupChoice, __devupChoice ? base : \"\"])(on));\nexport const e = \"OLpadding-v4px\";\nexport const f = (rest, handler, k) => ((__devupSpread0, __devupSpread1) => <div {...__devupSpread0} {...__devupSpread1} className={`OLpadding-v4px ${__devupSpread1?.className || \"\"} ${__devupSpread0?.className || \"\"}`} style={{\n\t...__devupSpread1?.style,\n\t...__devupSpread0?.style\n}} />)(((__devupSpreadValue) => ({ ...__devupSpreadValue }))(rest), ((__devupSpreadValue) => ({ ...__devupSpreadValue }))({\n\tonClick: handler,\n\t[k]: 1\n}));\nexport const g = (theme, key) => ((__devupSpread2, __devupAssignment515) => <div className={`OHb1daat_m9xrcm7oa ${__devupAssignment515?.[0] ?? \"\"}`} style={{\n\t\"---SUimport_s_x7b__s_x42_ox_m_scss_m_sstyled_m_skeyframes_s_x7d__sfrom_s_x27__x40_devup_dui_lreact_x27__x3b__xa_export_sconst_sa_s_x3d__s_obase_e_s_x3d__x3e__scss_obase_e_x3b__xa_export_sconst_sb_s_x3d__s_oon_e_s_x3d__x3e__scss_oon_s_a_a_s_x7b__scolor_n_s_x27_blue_x27__s_x7d__e_x3b__xa_export_sconst_sc_s_x3d__scss_o_x27_color_n_sgreen_x3b__smargin_n_s0_x27__e_x3b__xa_export_sconst_sd_s_x3d__s_oon_m_sbase_e_s_x3d__x3e__scss_oon_s_x3f__sbase_s_n_s_x7b__scolor_n_s_x27_red_x27__s_x7d__e_x3b__xa_export_sconst_se_s_x3d__scss_o_x7b__s_p_p_pnull_m_s_p_p_pfalse_m_s_p_p_pundefined_m_s_p_p_p_ovoid_s0_e_m_sp_n_s1_s_x7d__e_x3b__xa_export_sconst_sf_s_x3d__s_orest_m_shandler_m_sk_e_s_x3d__x3e__s_x3c__x42_ox_s_x7b__p_p_prest_x7d__s_x7b__p_p_p_x7b__sp_n_s1_m_son_x43_lick_n_shandler_m_s_x5b_k_x5d__n_s1_s_x7d__x7d__s_l_x3e__x3b__xa_export_sconst_sg_s_x3d__s_otheme_m_skey_e_s_x3d__x3e__s_x3c__x42_ox_sbg_x3d__x7b_theme_pcolors_x5b_key_x5d__x7d__scolor_x3d__x7b__x7b__sa_n_s_x27_red_x27__m_s_p_p_ptheme_pmore_s_x7d__x5b__x27_b_x27__x5d__x7d__s_l_x3e__x3b__xa_export_sconst_sh_s_x3d__s_o_x42_ase_e_s_x3d__x3e__sstyled_pdiv_o_x42_ase_e_x3b__xa_export_sconst_si_s_x3d__skeyframes_o_x7b__sfrom_n_s_x7b__sopacity_n_s0_s_x7d__s_x7d__sas_sconst_e_x3b__xa_export_sconst_sj_s_x3d__scss_o_p_p_p_x7b__sbg_n_s_x27_red_x27__s_x7d__e_x3b_-ms\": __devupSpread2,\n\t...__devupAssignment515?.[1]\n}} />)(theme.colors[key], ((__devupValue) => [\n\t\"OHakvl26rf1mpq1mbt\",\n\t{ \"---SUimport_s_x7b__s_x42_ox_m_scss_m_sstyled_m_skeyframes_s_x7d__sfrom_s_x27__x40_devup_dui_lreact_x27__x3b__xa_export_sconst_sa_s_x3d__s_obase_e_s_x3d__x3e__scss_obase_e_x3b__xa_export_sconst_sb_s_x3d__s_oon_e_s_x3d__x3e__scss_oon_s_a_a_s_x7b__scolor_n_s_x27_blue_x27__s_x7d__e_x3b__xa_export_sconst_sc_s_x3d__scss_o_x27_color_n_sgreen_x3b__smargin_n_s0_x27__e_x3b__xa_export_sconst_sd_s_x3d__s_oon_m_sbase_e_s_x3d__x3e__scss_oon_s_x3f__sbase_s_n_s_x7b__scolor_n_s_x27_red_x27__s_x7d__e_x3b__xa_export_sconst_se_s_x3d__scss_o_x7b__s_p_p_pnull_m_s_p_p_pfalse_m_s_p_p_pundefined_m_s_p_p_p_ovoid_s0_e_m_sp_n_s1_s_x7d__e_x3b__xa_export_sconst_sf_s_x3d__s_orest_m_shandler_m_sk_e_s_x3d__x3e__s_x3c__x42_ox_s_x7b__p_p_prest_x7d__s_x7b__p_p_p_x7b__sp_n_s1_m_son_x43_lick_n_shandler_m_s_x5b_k_x5d__n_s1_s_x7d__x7d__s_l_x3e__x3b__xa_export_sconst_sg_s_x3d__s_otheme_m_skey_e_s_x3d__x3e__s_x3c__x42_ox_sbg_x3d__x7b_theme_pcolors_x5b_key_x5d__x7d__scolor_x3d__x7b__x7b__sa_n_s_x27_red_x27__m_s_p_p_ptheme_pmore_s_x7d__x5b__x27_b_x27__x5d__x7d__s_l_x3e__x3b__xa_export_sconst_sh_s_x3d__s_o_x42_ase_e_s_x3d__x3e__sstyled_pdiv_o_x42_ase_e_x3b__xa_export_sconst_si_s_x3d__skeyframes_o_x7b__sfrom_n_s_x7b__sopacity_n_s0_s_x7d__s_x7d__sas_sconst_e_x3b__xa_export_sconst_sj_s_x3d__scss_o_p_p_p_x7b__sbg_n_s_x27_red_x27__s_x7d__e_x3b_-nh\": __devupValue },\n\t__devupValue\n])({\n\ta: \"red\",\n\t...theme.more\n}[\"b\"]));\nexport const h = (Base) => ((__devupCompose0) => ({ style, className, ...rest }) => <div {...rest} className={[__devupCompose0, className].filter(Boolean).join(\" \")} style={style} />)(Base);\nexport const i = \"KHch95dk0jofy9eoyu\";\nexport const j = \"OLbackground-vred\";\n",
}
