libs/extractor/src/snapshots/extractor__tests__stylex_attrs_emits_class_attribute.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import stylex from '@stylexjs/stylex';\nconst s = stylex.create({ a: { color: 'red' } });\nconst e = <div {...stylex.attrs(s.a)} />;\"))"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst s = { \"a\": \"OLcolor-vred\" };\nconst e = <div {...{ class: \"OLcolor-vred\" }} />;\n",
}
