libs/extractor/src/snapshots/extractor__tests__stylex_coexist_with_css.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nimport { css } from '@devup-ui/react';\nconst stylexStyles = stylex.create({\n    base: { color: 'blue' },\n});\nconst devupClass = css({ bg: 'red' });\nconst el = <div>\n  <div className={devupClass} />\n  <div {...stylex.props(stylexStyles.base)} />\n</div>;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst stylexStyles = { \"base\": \"a\" };\nconst devupClass = \"b\";\nconst el = <div>\n  <div className={devupClass} />\n  <div {...{ className: \"a\" }} />\n</div>;\n",
}
